--- a/library.bib
+++ b/library.bib
@@ -9,7 +9,7 @@
 @misc{9-7-erasure-code,
     author = {Emin Gabrielyan},
     title = {Erausre resulient (9,7)-code},
-    howpublished = {\url{https://docs.switzernet.com/people/emin-gabrielyan/051101-erasure-9-7-resilient/}},
+    url = {https://docs.switzernet.com/people/emin-gabrielyan/051101-erasure-9-7-resilient/},
     note = {Accessed: 2020-11-26},
     year = 2005,
 }
@@ -60,8 +60,8 @@ number = {5},
 issn = {0004-5411},
 url = {https://doi.org/10.1145/324133.324179},
 doi = {10.1145/324133.324179},
-note = {Pre-print at \url{http://www.math.tau.ac.il/~nogaa/PDFS/linhash13.pdf},
-technical report at \url{https://tidsskrift.dk/brics/article/view/1880}},
+note = {\url{http://www.math.tau.ac.il/~nogaa/PDFS/linhash13.pdf}
+ \url{https://tidsskrift.dk/brics/article/view/1880}},
 journal = {J. ACM},
 month = sep,
 pages = {667-683},
@@ -89,10 +89,10 @@ year="2018",
 publisher="Springer International Publishing",
 pages="257--279",
 isbn="978-3-319-98355-4",
-doi="10.1007/978-3-319-98355-4_15",
-url="https://doi.org/10.1007/978-3-319-98355-4_15",
-note={\url{https://doi.org/10.1007/978-3-319-98355-4_15}},
+doi="10.1007/978-3-319-98355-4_15"
 }
+%note={\url{https://doi.org/10.1007/978-3-319-98355-4_15}},
+%}
 
 @article{cuckoo-journal,
 title = "Cuckoo hashing",
@@ -102,7 +102,7 @@ number = "2",
 pages = "122 - 144",
 year = "2004",
 issn = "0196-6774",
-doi = "https://doi.org/10.1016/j.jalgor.2003.12.002",
+doi = "10.1016/j.jalgor.2003.12.002",
 url = "http://www.sciencedirect.com/science/article/pii/S0196677403001925",
 author = "Rasmus Pagh and Flemming Friche Rodler",
 keywords = "Data structures, Dictionaries, Information retrieval, Searching, Hashing, Experiments",
@@ -126,7 +126,6 @@ note = {\url{https://www.itu.dk/people/pagh/papers/cuckoo-jour.pdf}}
   volume    = {abs/1503.03465},
   year      = {2015},
   url       = {http://arxiv.org/abs/1503.03465},
-  note = {\url{http://arxiv.org/abs/1503.03465}},
   archivePrefix = {arXiv},
   eprint    = {1503.03465},
 }
@@ -147,14 +146,14 @@ isbn="978-3-540-74462-7"
 @misc{umash,
 author = {Paul Khuong},
 title = {{UMASH}: a fast and universal enough hash},
-howpublished = {\url{https://engineering.backtrace.io/2020-08-24-umash-fast-enough-almost-universal-fingerprinting/}},
+url = {https://engineering.backtrace.io/2020-08-24-umash-fast-enough-almost-universal-fingerprinting/},
 year = {2020},
 }
 
 @misc{xxh3,
 author = {Yann Collet},
 title = {Presenting {XXH3}},
-howpublished = {\url{https://fastcompression.blogspot.com/2019/03/presenting-xxh3.html}},
+url = {https://fastcompression.blogspot.com/2019/03/presenting-xxh3.html},
 year = {2019},
 }
 
@@ -165,7 +164,6 @@ year = {2019},
   volume    = {abs/1505.01523},
   year      = {2017},
   url       = {http://arxiv.org/abs/1505.01523},
-  note       = {\url{http://arxiv.org/abs/1505.01523}},
   archivePrefix = {arXiv},
   eprint    = {1505.01523},
   timestamp = {Mon, 13 Aug 2018 16:48:49 +0200},
@@ -187,7 +185,7 @@ series = {LNCS},
 keywords = {},
 pubstate = {published},
 tppubtype = {inproceedings},
-note = {\url{https://pages.cpsc.ucalgary.ca/~woelfel/paper/efficient_strongly/efficient_strongly.pdf}}
+url = {https://pages.cpsc.ucalgary.ca/~woelfel/paper/efficient_strongly/efficient_strongly.pdf}
 }
 
 @article{simple-hash-functions-work,
@@ -209,6 +207,7 @@ title = {String Hashing for Linear Probing},
 booktitle = {Proceedings of the 2009 Annual ACM-SIAM Symposium on Discrete Algorithms},
 chapter = {},
 pages = {655-664},
+year = {2009},
 doi = {10.1137/1.9781611973068.72},
 URL = {https://epubs.siam.org/doi/abs/10.1137/1.9781611973068.72},
 eprint = {https://epubs.siam.org/doi/pdf/10.1137/1.9781611973068.72}
@@ -221,11 +220,10 @@ year = {2017}
 }
 
 @misc{smhasher,
-author = {Reini Urban et al.},
+author = {Urban, Reini and others},
 title = {SMhasher},
 year = {2020},
 publisher = {GitHub},
-howpublished = {\url{https://github.com/rurban/smhasher}},
 commit = {aea4c21044176f88f1f9e1a2a91a7c8a662254cf},
 url = {https://github.com/rurban/smhasher}
 }
@@ -251,7 +249,7 @@ url = {https://github.com/rurban/smhasher}
 @Misc{codetables.de,
   author =       "Grassl, Markus",
   title =        "{Bounds on the minimum distance of linear codes and quantum codes}",
-  howpublished = "Online available at \url{http://www.codetables.de}",
+  url = {http://www.codetables.de},
   year =         "2007",
   note =         "Accessed on 2020-12-19"
 }
@@ -275,4 +273,87 @@ url = {https://github.com/rurban/smhasher}
   timestamp = {Tue, 01 Jan 2019 15:01:25 +0100},
   biburl    = {https://dblp.org/rec/journals/corr/abs-1812-07527.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Misc{rust-quadratic,
+  author =       "Joshua Landau",
+  title =        "{Exposure of HashMap iteration order allows for $O(n^2)$ blowup}",
+  url = {https://github.com/rust-lang/rust/issues/36481},
+  year =         "2016",
+  note =         "Accessed on 2020-12-32"
+}
+
+@Misc{impala-quadratic,
+  author =       "Jim Apple",
+  title =        "{Ensure monotonic count(distinct x) performance}",
+  url = {https://issues.apache.org/jira/browse/IMPALA-2653},
+  year =         "2015",
+  note =         "Accessed on 2020-12-32"
+}
+
+
+@inproceedings{poly1305,
+  title={The {Poly1305-AES} message-authentication code},
+  author={Bernstein, Daniel J},
+  booktitle={International Workshop on Fast Software Encryption},
+  pages={32--49},
+  year={2005},
+  organization={Springer}
+}
+
+@article{chord,
+  title={Chord: A scalable peer-to-peer lookup service for internet applications},
+  author={Stoica, Ion and Morris, Robert and Karger, David and Kaashoek, M Frans and Balakrishnan, Hari},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={31},
+  number={4},
+  pages={149--160},
+  year={2001},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{quantum-key-distribution,
+  title={The security of practical quantum key distribution},
+  author={Scarani, Valerio and Bechmann-Pasquinucci, Helle and Cerf, Nicolas J and Du{\v{s}}ek, Miloslav and L{\"u}tkenhaus, Norbert and Peev, Momtchil},
+  journal={Reviews of modern physics},
+  volume={81},
+  number={3},
+  pages={1301},
+  year={2009},
+  publisher={APS}
+}
+
+@inproceedings{privacy-amplification,
+  title={Universally composable privacy amplification against quantum adversaries},
+  author={Renner, Renato and K{\"o}nig, Robert},
+  booktitle={Theory of Cryptography Conference},
+  pages={407--425},
+  year={2005},
+  organization={Springer}
+}
+
+@article{random-closest-pair,
+  title={A reliable randomized algorithm for the closest-pair problem},
+  author={Dietzfelbinger, Martin and Hagerup, Torben and Katajainen, Jyrki and Penttonen, Martti},
+  journal={Journal of Algorithms},
+  volume={25},
+  number={1},
+  pages={19--51},
+  year={1997},
+  publisher={Elsevier}
+}
+
+@article{fuzzy-extractors,
+   title={Fuzzy Extractors: How to Generate Strong Keys from Biometrics and Other Noisy Data},
+   volume={38},
+   ISSN={1095-7111},
+   url={http://dx.doi.org/10.1137/060651380},
+   DOI={10.1137/060651380},
+   number={1},
+   journal={SIAM Journal on Computing},
+   publisher={Society for Industrial & Applied Mathematics (SIAM)},
+   author={Dodis, Yevgeniy and Ostrovsky, Rafail and Reyzin, Leonid and Smith, Adam},
+   year={2008},
+   month={Jan},
+   pages={97–139}
 }
