prepare for wads, first step compiling latex

--- a/library.bib
+++ b/library.bib
@@ -22,10 +22,8 @@
     pages = "143 - 154",
     year = "1979",
     issn = "0022-0000",
-    doi = "https://doi.org/10.1016/0022-0000(79)90044-8",
     url = "http://www.sciencedirect.com/science/article/pii/0022000079900448",
     author = "J. Lawrence Carter and Mark N. Wegman",
-    note = {\url{https://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.465.1355}}
 }
 
 @inproceedings{umac,
@@ -36,7 +34,6 @@
   year={1999},
   organization={Springer},
   url = "https://link.springer.com/chapter/10.1007/3-540-48405-1_14",
-  doi = "https://doi.org/10.1007/3-540-48405-1_14",
   note = {\url{https://web.cs.ucdavis.edu/~rogaway/papers/umac-full.pdf}}
 }
 
@@ -59,7 +56,6 @@ volume = {46},
 number = {5},
 issn = {0004-5411},
 url = {https://doi.org/10.1145/324133.324179},
-doi = {10.1145/324133.324179},
 note = {\url{http://www.math.tau.ac.il/~nogaa/PDFS/linhash13.pdf}
  \url{https://tidsskrift.dk/brics/article/view/1880}},
 journal = {J. ACM},
@@ -73,7 +69,6 @@ keywords = {universal hashing, hashing via linear maps}
    title={Linear Hashing},
    volume={4},
    url={https://tidsskrift.dk/brics/article/view/18808},
-   DOI={10.7146/brics.v4i16.18808},
    number={16},
    journal={BRICS Report Series},
    author={Alon, Noga and Dietzfelbinger, Martin and Miltersen, Peter and Petrank, Erez and Tardos, Gábor},
@@ -89,7 +84,6 @@ year="2018",
 publisher="Springer International Publishing",
 pages="257--279",
 isbn="978-3-319-98355-4",
-doi="10.1007/978-3-319-98355-4_15"
 }
 %note={\url{https://doi.org/10.1007/978-3-319-98355-4_15}},
 %}
@@ -102,7 +96,6 @@ number = "2",
 pages = "122 - 144",
 year = "2004",
 issn = "0196-6774",
-doi = "10.1016/j.jalgor.2003.12.002",
 url = "http://www.sciencedirect.com/science/article/pii/S0196677403001925",
 author = "Rasmus Pagh and Flemming Friche Rodler",
 keywords = "Data structures, Dictionaries, Information retrieval, Searching, Hashing, Experiments",
@@ -174,7 +167,7 @@ year = {2019},
 @inproceedings{woelfel-toeplitz,
 title = {Efficient Strongly Universal and Optimally Universal Hashing},
 author = {Philipp Woelfel},
-doi = {10.1007/3-540-48340-3_24},
+//doi = {10.1007/3-540-48340-3_24},
 year = {1999},
 date = {1999-01-01},
 booktitle = {Mathematical Foundations of Computer Science 1999, 24th International Symposium},
