--- a/halftime-hash.tex
+++ b/halftime-hash.tex
@@ -1,4 +1,6 @@
-\documentclass[sigconf, nonacm]{acmart}
+\documentclass[runningheads]{llncs}
+
+%\documentclass{article}
 
  %% \documentclass[acmsmall, nonacm]{acmart}
 
@@ -14,7 +16,7 @@
 %\usepackage{accsupp}
 %\usepackage{moreverb}
 \usepackage{amsfonts}
-\usepackage{amsmath,amsthm}
+\usepackage{amsmath}%,amsthm}
 \usepackage{amssymb}
 \usepackage{color}
 %\usepackage{comment}
@@ -22,28 +24,15 @@
 \usepackage{hyperref}
 \usepackage{listings}
 \usepackage{microtype}
-\usepackage{multirow}
+%\usepackage{multirow}
 %\usepackage{newpxtext}
 %\usepackage{verbatim}
 %\usepackage{cleveref}
-\usepackage{balance}
+%\usepackage{balance}
+%\usepackage{natbib}
 
 
-%% The following content must be adapted for the final version
-% paper-specific
-\newcommand\vldbdoi{XX.XX/XXX.XX}
-\newcommand\vldbpages{XXX-XXX}
-% issue-specific
-\newcommand\vldbvolume{14}
-\newcommand\vldbissue{1}
-\newcommand\vldbyear{2020}
-% should be fine as it is
-\newcommand\vldbauthors{\authors}
-\newcommand\vldbtitle{\shorttitle} 
-% leave empty if no availability url should be set
-\newcommand\vldbavailabilityurl{http://vldb.org/pvldb/format_vol14.html}
-% whether page numbers should be shown or not, use 'plain' for review versions, 'empty' for camera ready
-\newcommand\vldbpagestyle{plain} 
+\renewcommand\UrlFont{\color{blue}\rmfamily}
 
 \lstloadlanguages{C++}
 
@@ -61,9 +50,9 @@
 %\pagenumbering{gobble}
 %\pagestyle{empty}
 
-\newtheorem{theorem}{Theorem}
-\newtheorem*{lemma}{Lemma}
-\newtheorem*{claim}{Claim}
+%\newtheorem{theorem}{Theorem}
+%\newtheorem*{lemma}{Lemma}
+%\newtheorem*{claim}{Claim}
 
 \newcommand{\reals}{\mathbb{R}}
 \newcommand{\rats}{\mathbb{Q}}
@@ -78,14 +67,19 @@
 \newenvironment{blockquote}
 {\begin{quote}\itshape}
 {\end{quote}}
+
+
+\begin{document}
+
 \title{HalftimeHash: modern hashing without 64-bit multipliers or finite fields}
-\author{Jim Apple}
-\orcid{0000-0002-8685-9451}
-\email{jbapple@apache.org}
+\author{Jim Apple
+\orcidID{0000-0002-8685-9451}}
+\institute{\email{jbapple@apache.org}}
 
 %\hypersetup{draft}
 
-\begin{document}
+\maketitle
+
 %\thispagestyle{fancyplain}
 %\thispagestyle{empty}
 
@@ -94,35 +88,12 @@ HalftimeHash is a new algorithm for hashing long strings.
 The goals are few collisions (different inputs that produce identical output hash values), high performance, and portability -- HalftimeHash should be easy to implement correctly on new ISA's and easy to code in almost any programming language.
 
 Compared to the fastest universal hash functions on long strings, clhash and UMASH, HalftimeHash decreases collision probability while also increasing performance by over 50\%.
+
+\keywords{Hash functions \and Second keyword \and Another keyword.}
 \end{abstract}
 
-\maketitle
 
-%%% do not modify the following VLDB block %%
-%%% VLDB block start %%%
-\pagestyle{\vldbpagestyle}
-\begingroup\small\noindent\raggedright\textbf{PVLDB Reference Format:}\\
-\vldbauthors. \vldbtitle. PVLDB, \vldbvolume(\vldbissue): \vldbpages, \vldbyear.\\
-\href{https://doi.org/\vldbdoi}{doi:\vldbdoi}
-\endgroup
-\begingroup
-\renewcommand\thefootnote{}\footnote{\noindent
-This work is licensed under the Creative Commons BY-NC-ND 4.0 International License. Visit \url{https://creativecommons.org/licenses/by-nc-nd/4.0/} to view a copy of this license. For any use beyond those covered by this license, obtain permission by emailing \href{mailto:info@vldb.org}{info@vldb.org}. Copyright is held by the owner/author(s). Publication rights licensed to the VLDB Endowment. \\
-\raggedright Proceedings of the VLDB Endowment, Vol. \vldbvolume, No. \vldbissue\ %
-ISSN 2150-8097. \\
-\href{https://doi.org/\vldbdoi}{doi:\vldbdoi} \\
-}\addtocounter{footnote}{-1}\endgroup
-%%% VLDB block end %%%
 
-%%% do not modify the following VLDB block %%
-%%% VLDB block start %%%
-\ifdefempty{\vldbavailabilityurl}{}{
-\vspace{.3cm}
-\begingroup\small\noindent\raggedright\textbf{PVLDB Artifact Availability:}\\
-The source code, data, and/or other artifacts have been made available at \url{\vldbavailabilityurl}.
-\endgroup
-}
-%%% VLDB block end %%%
 
 \section{Introduction}
 A hash family is a map from a set of seeds $S$ and a domain $D$ to a codomain $C$.\footnote{Seeds are sometimes called {\em salts} or {\em keys}. Given that elements of the domain of hash functions are also sometimes called {\em keys}, this work will avoid this term altogether, for the sake of clarity.}
@@ -176,14 +147,16 @@ VHASH similarly came about before EHC and is an update to UHASH designed to take
 
 % TODO: graph this perf comparison with other non-universal families
 
-\includegraphics[width=8cm]{smhasher-speed.eps}
-\captionof{figure}{
-  \label{smhasher-speed}
-    SomThe two fastest variants of HalftimeHash are faster than all hash families in the SMHasher suite on a CPU with AVX-512 instructions, even families that come with no AU guarantees. \protect\cite{smhasher}
-    MeowHash128 and xxh128 produce 128 output bits, all other SMHasher functions produce 64 bits.
-    HalftimeHash16 produces 128 output bits, HalftimeHash24 produces 192 output bits, HalftimeHash32 produces 256 bits, and HalftimeHash40 produces 320 bits.
-    Of the families here, only HalftimeHash and xxh128 pass all SMHasher tests.
-}
+%% \begin{figure}
+%%   \includegraphics[width=\textwidth]{smhasher-speed.eps}
+%% \caption{
+%%   \label{smhasher-speed}
+%%     The two fastest variants of HalftimeHash are faster than all hash families in the SMHasher suite on a CPU with AVX-512 instructions, even families that come with no AU guarantees. \protect\cite{smhasher}
+%%     MeowHash128 and xxh128 produce 128 output bits, all other SMHasher functions produce 64 bits.
+%%     HalftimeHash16 produces 128 output bits, HalftimeHash24 produces 192 output bits, HalftimeHash32 produces 256 bits, and HalftimeHash40 produces 320 bits.
+%%     Of the families here, only HalftimeHash and xxh128 pass all SMHasher tests.
+%% }
+%% \end{figure}
 
 \section{Notations and Conventions}
 
@@ -256,16 +229,18 @@ The central idea is called ``EHC'', for {\em Encode, Hash, Combine}. \cite{ehc-n
 The application of the erasure code adds ``minimum distance'' $d$, so that any two input values that differ in any location produce encoded outputs that differ in at least $d > 1$ locations.
 This decreases the probability of collisions by a factor of $\varepsilon^{d-1}$.
 
-\includegraphics[width=8cm]{Diagram2.eps}
-\captionof{figure}{
-  \label{tree}
-  A simplified example of the tree hash shape used in HalftimeHash.
-  At the leaves are the input blocks to be hashed.
-  Each instance of seven words is initially encoded and then hashed down to three blocks in a process called ``EHC''. \cite{ehc-nandi}
-  Following that, three copies of Carter-Wegman-style tree hash run on each of the components produced during the EHC step.
-  Note that the right-most blocks bypass one round of hashing.
-  This is equivalent to hashing with the identity function, which has $\varepsilon = 0$, and so allows the values to pass-through without adding any extra collision probability. \cite{badger}
-}
+%% \begin{figure}
+%% \includegraphics[width=\textwidth]{Diagram2.eps}
+%% \caption{
+%%   \label{tree}
+%%   A simplified example of the tree hash shape used in HalftimeHash.
+%%   At the leaves are the input blocks to be hashed.
+%%   Each instance of seven words is initially encoded and then hashed down to three blocks in a process called ``EHC''. \cite{ehc-nandi}
+%%   Following that, three copies of Carter-Wegman-style tree hash run on each of the components produced during the EHC step.
+%%   Note that the right-most blocks bypass one round of hashing.
+%%   This is equivalent to hashing with the identity function, which has $\varepsilon = 0$, and so allows the values to pass-through without adding any extra collision probability. \cite{badger}
+%% }
+%% \end{figure}
 
 This section focuses on a particular instantiation of this formula with distance $3$, producing a hash value $24$ bytes in size.
 Adding variants with different distances is direct, and the benchmarking results below include variants with distance 2, 4, and 5.
@@ -296,7 +271,7 @@ Many programming languages do not include a way to perform native carryless (aka
 
 % TODO: check this
 
-The other reason HalftimeHash avoids 64-bit multiplications is SIMD-friendliness.
+The other reason HalftimeHash avoids 64-bit multiplications is SIMD-friend\-li\-ness.
 The x86-64 ISA extensions SSE2, AVX2, and AVX-512F all contain instruction to simultaneously multiply multiple pairs of 32-bit words, producing multiple 64-bit values.
 Aarch64 has similar instructions in the NEON set.
 % The POWER ISA also contains this, but only on 128 bits at once?
@@ -358,7 +333,7 @@ Once the encoding is done, the hash function in step 2 reduces the size of the u
 
 Gabrielyan's code produces 2 additional 3-tuples without altering the seven inputs.\footnote{This is called a ``systematic'' code.}
 The first additional tuple is just the \texttt{xor} of the seven input words.
-The second tuple is the following sum, numbering the input words as $(x_0, y_0, z_0), (x_1, y_1, z_1), \dots$.
+The second tuple is the following sum, numbering the input words as $(x_0, y_0, z_0)$, $(x_1, y_1, z_1)$, $\dots$.
 
 \begin{displaymath}
   \begin{array}{rlcr}
@@ -937,22 +912,26 @@ Three frontiers emerge, in which HalftimeHash always has better performance and 
 
 Figure \ref{output-variants} shows the variation of HalftimeHash throughput between output variants across input sizes.
 
-\includegraphics[width=8cm]{clang-local-hh4.eps}
-\captionof{figure}{
-  \label{output-variants}
-  Different output widths of HalftimeHash.
-  %Note that even the family with the longest output of 40 bytes is compet than clhash and UMASH; see Figure \protect\ref{frontier}.
-  The sharp drops in performance correspond to the L2 and L3 data cache sizes.
-}
+%% \begin{figure}
+%% \includegraphics[width=\textwidth]{clang-local-hh4.eps}
+%% \caption{
+%%   \label{output-variants}
+%%   Different output widths of HalftimeHash.
+%%   %Note that even the family with the longest output of 40 bytes is compet than clhash and UMASH; see Figure \protect\ref{frontier}.
+%%   The sharp drops in performance correspond to the L2 and L3 data cache sizes.
+%% }
+%% \end{figure}
 
-\includegraphics[width=8cm]{speed-v-epsilon.eps}
-\captionof{figure}{
-  \label{frontier}
-  Trade-offs for almost-universal string hashing functions on strings of size 250KB on an i7-7800x with AVX-512.
-  The upper right corner is ideal: low execution time and low collision probability.
-  Note that the clhash and UMASH executions are not along the efficient frontier / layer-of-maxima, in that for each clhash / UMASH version, at least one version of HalftimeHash is faster and has lower collision probability. \protect\cite{layer-of-maxima}
-  This contrasts with the case of short strings, where clhash and UMASH have better performance.
-}
+%% \begin{figure}
+%% \includegraphics[width=\textwidth]{speed-v-epsilon.eps}
+%% \caption{
+%%   \label{frontier}
+%%   Trade-offs for almost-universal string hashing functions on strings of size 250KB on an i7-7800x with AVX-512.
+%%   The upper right corner is ideal: low execution time and low collision probability.
+%%   Note that the clhash and UMASH executions are not along the efficient frontier / layer-of-maxima, in that for each clhash / UMASH version, at least one version of HalftimeHash is faster and has lower collision probability. \protect\cite{layer-of-maxima}
+%%   This contrasts with the case of short strings, where clhash and UMASH have better performance.
+%% }
+%% \end{figure}
 
 Figure \ref{vs-cl} adds comparisons between clhash, UMASH, and HalftimeHash across input sizes and ISA's.
 Although these machines support different ISA vector extensions, the pattern is similar: at high enough volume, HalftimeHash's throughput exceeds that of the carryless-multiplication families.
@@ -960,34 +939,34 @@ The ``v3'' after the name indicates block size: v3 means a 256-bit block size, w
 Figure \ref{block-size} shows how the smaller block size performs better on the AMD chip.
 %Cross-machine workloads or persistent hash values may require a consistent block size between machines with different maximum SIMD register sizes, but Figure \ref{block-size} shows the performance penalty is not unreasonable.
 
-\begin{figure*}
-\begin{tabular}{cccc}
-\includegraphics[width=8.5cm]{line-cl-hh24.eps}
-&
-\includegraphics[width=8.5cm]{amd-cl-hh24.eps}
-\end{tabular}
-\caption{
-  \label{vs-cl}
-  Comparison of Intel (i7-7800x) and AMD (EC2 c5a.large, 7R32 chip) performance.
-  These AMD chips do not support AVX-512, but still HalftimeHash with 256-bit registers exceeds the speed of clmul-based hashing methods by up to a factor of 2 on long strings.
-  In both cases, for long strings, HalftimeHash with 24 bytes of output is faster than clhash and UMASH.
-  HalftimeHash24 also has lower collision probability.
-  For long strings, the incremental cost of hashing the 24 bytes down to 8 with tabulation hashing is insignificant.
-}
-\end{figure*}
+%% \begin{figure*}
+%% \begin{tabular}{cccc}
+%% \includegraphics[width=6.0cm]{line-cl-hh24.eps}
+%% &
+%% \includegraphics[width=6.0cm]{amd-cl-hh24.eps}
+%% \end{tabular}
+%% \caption{
+%%   \label{vs-cl}
+%%   Comparison of Intel (i7-7800x) and AMD (EC2 c5a.large, 7R32 chip) performance.
+%%   These AMD chips do not support AVX-512, but still HalftimeHash with 256-bit registers exceeds the speed of clmul-based hashing methods by up to a factor of 2 on long strings.
+%%   In both cases, for long strings, HalftimeHash with 24 bytes of output is faster than clhash and UMASH.
+%%   HalftimeHash24 also has lower collision probability.
+%%   For long strings, the incremental cost of hashing the 24 bytes down to 8 with tabulation hashing is insignificant.
+%% }
+%% \end{figure*}
 
-\begin{figure*}
-\begin{tabular}{cccc}
-\includegraphics[width=8.5cm]{amd-16.eps}
-&
-\includegraphics[width=8.5cm]{amd-24.eps}
-\end{tabular}
-\caption{
-  \label{block-size}
-  AMD performance.
-  AMD chips do not have AVX-512 instructions, so blocks of that size are simulated with 2 AVX2 registers.
-  Using a block size of 256 bits performs better.}
-\end{figure*}
+%% \begin{figure*}
+%% \begin{tabular}{cccc}
+%% \includegraphics[width=6.0cm]{amd-16.eps}
+%% &
+%% \includegraphics[width=6.0cm]{amd-24.eps}
+%% \end{tabular}
+%% \caption{
+%%   \label{block-size}
+%%   AMD performance.
+%%   AMD chips do not have AVX-512 instructions, so blocks of that size are simulated with 2 AVX2 registers.
+%%   Using a block size of 256 bits performs better.}
+%% \end{figure*}
 
 %% TODO: compare to VHASH
 
@@ -1020,12 +999,11 @@ Future potential work includes:
 
 %\lstinputlisting{narrow-code/halftime-hash-basic.c}
 
-\begin{acks}
+\section*{Acknowledgments}
 Thanks to Daniel Lemire, Paul Khuong, and Guy Even for helpful discussions and feedback.
-\end{acks}
-\balance
+%\balance
 
-\bibliographystyle{ACM-Reference-Format}
+\bibliographystyle{splncs04}
 \bibliography{library}
 
 %% \appendix
