cut some text for the shorter limit

--- a/library.bib
+++ b/library.bib
@@ -350,3 +350,12 @@ url = {https://github.com/rurban/smhasher}
    month={Jan},
    pages={97–139}
 }
+
+@inproceedings{algorithm-attack,
+  title={Denial of Service via Algorithmic Complexity Attacks},
+  author={Crosby, Scott A. and Wallach, Dan S.},
+  booktitle={Proceedings of the 12th {USENIX} Security Symposium},
+  pages={29--44},
+  year={2003}
+}
+
